[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ticket/ticket.gd" id="1_ticket"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ticket"]
bg_color = Color(0.92, 0.88, 0.78, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0

[node name="Ticket" type="PanelContainer"]
custom_minimum_size = Vector2(360, 320)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ticket")
script = ExtResource("1_ticket")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TicketHeader" type="Label" parent="VBox"]
layout_mode = 2
text = "Kagit Bilet - 5 Coin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 3
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6

[node name="TicketFooter" type="Label" parent="VBox"]
layout_mode = 2
text = "Kazi ve eslesmeleri bul!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="VBox"]
visible = false
layout_mode = 2
text = "Tamamlandi!"
horizontal_alignment = 1
vertical_alignment = 1
